unpackaged/main/default/objects/User/fields/Bunnings_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Bunnings_Job_Role__c</fullName>
    <description>Bunnings Job Role from the source system, used to determine what Sales Rep ID field on Store object to assign to the trade specialist user.</description>
    <label>Bunnings Job Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>