unpackaged/main/default/objects/User/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>This field is used in sharing rules to define a AU User&#39;s and NZ User&#39;s</description>
    <inlineHelpText>This field is used in sharing rules to define a AU User&#39;s and NZ User&#39;s</inlineHelpText>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>