unpackaged/main/default/objects/User/fields/HR_Manager__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager__c</fullName>
    <description>Manager for HR purposes. May not be a user in the system.</description>
    <label>HR Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>