unpackaged/main/default/objects/User/fields/Is_TS__c.field-meta.xml
<CustomField>
    <fullName>Is_TS__c</fullName>
    <formula>CONTAINS(Profile.Name, &#39;Trade Specialist&#39;)</formula>
    <label>Is TS</label>
    <type>Checkbox</type>
</CustomField>