unpackaged/main/default/objects/User/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <description>Location code that maps to the external ID on the store object</description>
    <label>Location Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>