unpackaged/main/default/objects/User/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>Name of the location</description>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>