unpackaged/main/default/objects/User/fields/Sales_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_External_Id__c</fullName>
    <description>External Id of Trade Specialists</description>
    <label>Sales External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>