unpackaged/main/default/objects/User/fields/Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_ID__c</fullName>
    <description>Unique sales rep number assigned to the user either from legacy system sequence or newly generated in Salesforce</description>
    <label>Sales Rep ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>