unpackaged/main/default/objects/User/fields/Store_Email__c.field-meta.xml
<CustomField>
    <fullName>Store_Email__c</fullName>
    <description>Email from Trade_Specialist_Email__c in Store object.</description>
    <label>Store Email</label>
    <type>Email</type>
</CustomField>