unpackaged/main/default/objects/User/fields/System_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Profile_Id__c</fullName>
    <formula>$User.ProfileId</formula>
    <label>System Profile Id</label>
    <type>Text</type>
</CustomField>