unpackaged/main/default/objects/User/fields/Team_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID used to identify the team member.</description>
    <externalId>true</externalId>
    <label>Team Member Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>