unpackaged/main/default/objects/User/fields/Title_Location__c.field-meta.xml
<CustomField>
    <fullName>Title_Location__c</fullName>
    <description>Tile and location name of the user</description>
    <formula>Title &amp; if(ISBLANK(Title) || ISBLANK(Location_Name__c),&quot;&quot; ,&quot;, &quot;) &amp; Location_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title &amp; Location</label>
    <type>Text</type>
</CustomField>