unpackaged/main/default/objects/User/fields/User_Sales_Rep_Number__c.field-meta.xml
<CustomField>
    <fullName>User_Sales_Rep_Number__c</fullName>
    <description>To be deleted</description>
    <formula>SUBSTITUTE(UserRole.DeveloperName, &#39;SRN_&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Sales Rep Number</label>
    <type>Text</type>
</CustomField>