unpackaged/main/default/objects/User/listViews/Admin_Reuse.listView-meta.xml
<ListView>
    <fullName>Admin_Reuse</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Country__c</columns>
    <columns>Sales_Rep_ID__c</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Bunnings_Job_Role__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OFFLINE_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Admin Reuse</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Administrator</group>
    </sharedTo>
</ListView>