unpackaged/main/default/objects/User/listViews/Retail_Contact_Centre_Team_Leader.listView-meta.xml
<ListView>
    <fullName>Retail_Contact_Centre_Team_Leader</fullName>
    <booleanFilter>2 AND (1 OR  4 or 5 or 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>Customer Support Team Leader</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Spare Parts Team Leader</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Head of Customer Experience</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Customer Support Team Manager</value>
    </filters>
    <label>Retail Contact Centre Team Leader</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Administrator</group>
    </sharedTo>
</ListView>